add docker mcp chnages